# z2p

./: .env  Cargo.toml  configuration.yaml  docker-compose.yaml  init_db.sh  useful.md
.github/workflows/: rust.yml
migrations/: 20221030145755_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
